--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding changes before rebasing conflicts
+	Some silly changes
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>A silly website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			silly content
 		</p>
 	</main>
 	<footer class="container">
