--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>Lots of trouble in a little repo</title>
+	<title>Updating Title for webpages</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			silly content
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
