--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>Updating Title for webpages</title>
+	<title>Updating Title for Taggin Compare Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
